Feature: add artisan console to set env variable

--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
     "homepage": "https://github.com/akbarcandra/env-console",
     "keywords": ["Laravel", "env", "console", "env-console"],
     "require": {
+        "illuminate/console": "~5",
         "illuminate/support": "~5"
     },
     "require-dev": {
